--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <img src="RVCE_logo.jpg" alt="Website Logo" style="width: 200px; margin-bottom: 20px;height: auto; position: absolute; top: 10px; left: 10px;">
+    </header>
     <div class="container">
         <h1>Food Additives Information</h1>
         <input type="text" id="searchBar" placeholder="Search by INS Code...">
@@ -16,4 +19,16 @@
     </div>
     <script src="script.js"></script>
 </body>
+<footer>
+    <div class="links">
+        <a href="https://en.wikipedia.org/wiki/International_Numbering_System_for_Food_Additives" target="_blank">WIKIPEDIA</a>
+        <a href="https://www.fda.gov/food/food-ingredients-packaging/food-additives-petitions" target="_blank">FDA</a>
+        <a href="https://www.efsa.europa.eu/en/topics/topic/food-additives" target="_blank">EFSA</a>
+        <a href="https://www.who.int/news-room/fact-sheets/detail/food-additives" target="_blank">WHO</a>
+        <a href="http://www.fao.org/fao-who-codexalimentarius/codex-texts/dbs/gsfa/en/" target="_blank">CODEX</a>
+    </div>
+    <a href="https://github.com/qwerty-arun/food_additives_website" target="_blank" class="github-link">
+        <img src="github-logo.webp" alt="GitHub" class="github-logo">
+    </a>
+</footer>
 </html>
