--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="RVCE_logo.jpg" alt="Website Logo" style="width: 200px; margin-bottom: 20px;height: auto; position: absolute; top: 10px; left: 10px; filter: brightness(0) invert(1);">
+        <img src="new logo.png" alt="Website Logo" style="width: 200px; margin-bottom: 20px;height: auto; position: absolute; top: 10px; left: 10px; filter: brightness(0) invert(1);">
     </header>
     <div class="container">
         <h1>Food Additives Information</h1>
