--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Additives Information</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #1f2833; /* Background color of the webpage */
+            color: #ffffff; /* Text color for better contrast */
+        }
+        .logo {
+            width: 200px;
+            margin-bottom: 20px;
+            height: auto;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            filter: invert(1);
+        }
+    </style>
 </head>
 <body>
     <header>
-        <img src="new logo.png" alt="Website Logo" style="width: 200px; margin-bottom: 20px;height: auto; position: absolute; top: 10px; left: 10px; filter: brightness(0) invert(1);">
+        <img src="new logo.png" alt="Website Logo" class="logo">
     </header>
     <div class="container">
         <h1>Food Additives Information</h1>
